wip(risk): crud system
