# tsoa/swagger.json
@@ -401,6 +401,234 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"RiskSourceType": {
+				"enum": [
+					"INTERNAL",
+					"EXTERNAL"
+				],
+				"type": "string"
+			},
+			"RiskSource": {
+				"enum": [
+					"Budaya",
+					"Karyawan",
+					"Bisnis Proses",
+					"Vendor",
+					"Pasar",
+					"Peraturan",
+					"Teknologi",
+					"Ekonomi",
+					"Sosial",
+					"Pemerintah",
+					"Konsumen"
+				],
+				"type": "string"
+			},
+			"RiskType": {
+				"enum": [
+					"Strategi",
+					"Operasional",
+					"Keuangan",
+					"Kepatuhan",
+					"Ketidakberpihakan",
+					"Keselamatan"
+				],
+				"type": "string"
+			},
+			"RiskConlusion": {
+				"enum": [
+					"Diterima",
+					"Mitigasi Ulang"
+				],
+				"type": "string"
+			},
+			"RiskEvaluationResult": {
+				"enum": [
+					"Efektif",
+					"Tidak Efektif"
+				],
+				"type": "string"
+			},
+			"ConsequenceValue": {
+				"enum": [
+					1,
+					2,
+					3,
+					4,
+					5
+				],
+				"type": "number"
+			},
+			"LikelyhoodValue": {
+				"enum": [
+					1,
+					2,
+					3,
+					4,
+					5
+				],
+				"type": "number"
+			},
+			"RiskDetailDTO": {
+				"properties": {
+					"deleted_at": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"updated_at": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"created_at": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"consequence": {
+						"$ref": "#/components/schemas/ConsequenceValue"
+					},
+					"likelyhood": {
+						"$ref": "#/components/schemas/LikelyhoodValue"
+					}
+				},
+				"required": [
+					"consequence",
+					"likelyhood"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"RiskDetailEntity": {
+				"properties": {
+					"deleted_at": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"updated_at": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"created_at": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"consequence": {
+						"$ref": "#/components/schemas/ConsequenceValue"
+					},
+					"likelyhood": {
+						"$ref": "#/components/schemas/LikelyhoodValue"
+					}
+				},
+				"required": [
+					"consequence",
+					"likelyhood"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"RiskDTO": {
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"creator_name": {
+						"type": "string",
+						"nullable": true
+					},
+					"editor_name": {
+						"type": "string",
+						"nullable": true
+					},
+					"creator_id": {
+						"type": "string",
+						"nullable": true
+					},
+					"editor_id": {
+						"type": "string",
+						"nullable": true
+					},
+					"created_at": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"updated_at": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"deleted_at": {
+						"type": "string",
+						"format": "date-time",
+						"nullable": true
+					},
+					"source_type": {
+						"$ref": "#/components/schemas/RiskSourceType"
+					},
+					"report_date": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"identification": {
+						"type": "string"
+					},
+					"consequence": {
+						"type": "string"
+					},
+					"source": {
+						"$ref": "#/components/schemas/RiskSource"
+					},
+					"type": {
+						"$ref": "#/components/schemas/RiskType"
+					},
+					"code": {
+						"type": "string"
+					},
+					"mitigasi_action": {
+						"type": "string"
+					},
+					"controlling": {
+						"type": "string"
+					},
+					"pic": {
+						"$ref": "#/components/schemas/AreaEntity"
+					},
+					"conclusion": {
+						"$ref": "#/components/schemas/RiskConlusion"
+					},
+					"evaluation_date": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"evaluated_by": {
+						"type": "string"
+					},
+					"evaluation_result": {
+						"$ref": "#/components/schemas/RiskEvaluationResult"
+					},
+					"inherit_risk": {
+						"$ref": "#/components/schemas/RiskDetailDTO"
+					},
+					"inherit_risk_result": {
+						"type": "string"
+					},
+					"residual_risk": {
+						"$ref": "#/components/schemas/RiskDetailDTO"
+					},
+					"residual_risk_result": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"source_type",
+					"report_date",
+					"identification",
+					"consequence",
+					"source",
+					"type",
+					"inherit_risk",
+					"residual_risk"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"SdmStatus": {
 				"enum": [
 					"KAWIN",
@@ -1107,6 +1335,166 @@
 				},
 				"tags": [
 					"Record Services"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/api/risks": {
+			"post": {
+				"operationId": "Create",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Risk Service"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/RiskDTO"
+							}
+						}
+					}
+				}
+			},
+			"get": {
+				"operationId": "Index",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Risk Service"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "page",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					},
+					{
+						"in": "query",
+						"name": "limit",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
+		"/api/risks/{id}": {
+			"put": {
+				"operationId": "Update",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Risk Service"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/RiskDTO"
+							}
+						}
+					}
+				}
+			},
+			"delete": {
+				"operationId": "Delete",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Risk Service"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			},
+			"get": {
+				"operationId": "Show",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Risk Service"
 				],
 				"security": [],
 				"parameters": [
